[tool.poetry]
name = "nonebot-plugin-sanae"
version = "0.0.5"
description = "sanae connecter"
authors = ["cosmo <applegm@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nonebot_plugin_sanae"}]

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-beta.3"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
