[tool.poetry]
name = "nonebot-plugin-sanae"
version = "0.0.5"
description = "sanae connecter"
authors = ["Hoshinonyaruko <applegm@me.com>"]
license = "MIT"
homepage = "https://github.com/Hoshinonyaruko/nonebot-plugin-sanae"
repository = "https://github.com/Hoshinonyaruko/nonebot-plugin-sanae"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-rc.1"
nonebot-adapter-onebot = "^2.1.5"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"